<resources>
    <string name="app_name">TicTacToe</string>
    <string name="restart">Restart</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>

    <string name="button">2 player mode</string>
    <string name="button2">1 player mode</string>
    <string name="button3">Score</string>
    <string name="button4">Win 3 consecutively 2P</string>
    <string name="button5">Win 3 consecutively 1P</string>
    <string name="button_about">About</string>

    <string name="w31p">You are Player 1 [O]</string>

    <string name="Rank">Rank</string>
    <string name="Name">Name</string>
    <string name="Score">Score</string>
    <string name="Time">Time</string>
    <string name="Logo">Logo</string>
    <string name="aboutText">Tic Tac Toe have four mode to play.\n
        \t1. one player mode\n
        \t2. two player mode\n
        \t3. win 3 consecutively 2P\n
        \t4. win 3 consecutively 1P\n\n
        Lets train your logical thinking skills!
    </string>
    <string name="developer">Developer</string>
    <string name="oneplayerTitle">About the one player mode</string>
    <string name="onePlayerAbout">
        This is a player against a bot
        \n\nPlayer score will be increased by one every time when they win the game.
        \n\nA result dialog will be displayed showing the score and the play time, whenever the player lost the game.
        \n\nThe player can decide if they are willing to enter their name into the leader board.
    </string>
    <string name="twoplayerTitle">About the one player mode</string>
    <string name="twoPlayerAbout">
        The two player mode is player against player.
        \n\nBoth players will take turns to play the game.
        \n\nA restart option from the menu will be provided for players to restart the game when they feel like to.
    </string>
    <string name="win3Title">About the win 3 consecutively 2P</string>
    <string name="win3">
        The win 3 consecutively 2P mode is also similar to the two player mode.
        \n\nBut it includes two layers of TicTacToe.
    </string>
    <string name="win3Title1p">About the win 3 consecutively 1P</string>
    <string name="win31p">
        The win 3 consecutively 1P mode is also similar to the one player mode.
        \n\nBut it includes two layers of TicTacToe.
    </string>
</resources>